flask_app/static/style/style.css
html,
body {
  margin: 0;
  padding: 0;
  min-height: 100vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  background-color: #2c2c2c;
  overflow-x: hidden;
}

body {
  font-family: Arial, sans-serif;
  margin: 0;
  background-color: #2c2c2c;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  overflow-x: hidden;
  max-width: 100%;
  overflow-y: auto;
}

header {
  background-color: #1e1e1e;
  padding: 10px 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
  position: fixed;
  top: 0;
  left: 0;
  height: 80px;
  width: 100%;
  z-index: 1200;
  border-bottom: 1px solid #333;
}
header .hamburger-menu {
  display: flex;
  flex-direction: column;
  cursor: pointer;
  z-index: 1100;
}
header .hamburger-menu .line {
  width: 30px;
  height: 3px;
  background-color: #fff;
  margin: 4px 0;
}
header .logo {
  display: flex;
  align-items: center;
  margin-left: 40px;
  margin-right: 10px;
}
header .logo .logo-img {
  width: 60px;
  height: auto;
  margin-right: 5px;
}
header .logo span {
  color: #ffffff;
  font-size: 24px;
  font-weight: bold;
}
header nav {
  position: relative;
  z-index: 3000;
  margin-left: auto;
}
header nav .nav-list {
  list-style: none;
  display: flex;
  margin: 0;
  padding: 0;
}
header nav .nav-list .nav-item {
  position: relative;
  margin-left: 30px;
}
header nav .nav-list .nav-item a {
  color: #ffffff;
  text-decoration: none;
  font-size: 18px;
}
header nav .nav-list .nav-item a:hover {
  cursor: pointer;
  background-color: #333;
}
header nav .nav-list .nav-item .dropdown {
  display: none;
  position: absolute;
  background-color: #1e1e1e;
  list-style: none;
  top: 100%;
  left: 0;
  min-width: 200px;
  padding: 10px;
  border-radius: 5px;
  z-index: 4000;
}
header nav .nav-list .nav-item .dropdown li {
  padding: 10px 15px;
  color: #ffffff;
}
header nav .nav-list .nav-item .dropdown li:hover {
  background-color: #333;
}
header nav .nav-list .nav-item:hover .dropdown {
  display: block;
}
header nav .nav-list .nav-item .account-dropdown {
  left: auto;
  right: 0;
}

.wrapper {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  min-height: 100%;
}

.content {
  flex-grow: 1;
  padding: 20px;
  width: 100%;
}

.side-menu {
  position: fixed;
  top: 0;
  left: -100%;
  width: 20%;
  height: 100%;
  background-color: #000;
  color: #fff;
  padding: 20px;
  transition: left 0.2s ease-in-out;
  z-index: 1000;
}
.side-menu.active {
  left: 0;
  z-index: 1100;
}
.side-menu .close-menu {
  position: absolute;
  top: 20px;
  right: 20px;
  background-color: transparent;
  border: none;
  color: #fff;
  font-size: 24px;
  cursor: pointer;
}
.side-menu .logo {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 20px;
}
.side-menu .logo .logo-img {
  width: 120px;
  height: auto;
}
.side-menu ul {
  list-style: none;
  padding: 0;
}
.side-menu ul li {
  margin: 20px 0;
  font-size: 18px;
}

.disclaimer {
  position: absolute;
  top: 0;
  left: 62%;
  transform: translateX(-50%);
  color: #FFA500;
  font-size: 12px;
  text-align: center;
  z-index: 1100;
  width: auto;
  background-color: transparent;
  padding-top: 15px;
}

@media (max-width: 1024px) {
  .disclaimer {
    font-size: 8px;
  }
}
@media (max-width: 768px) {
  .disclaimer {
    font-size: 6px;
  }
}
.chat-section-left-padding {
  width: 0%;
  background-color: red;
  padding: 20px;
  border-radius: 10px;
  color: #ffffff;
  text-align: center;
  font-size: 16px;
  max-height: 100vh;
  position: sticky;
  top: 10vh;
  margin-left: 10px;
}

.chat-container {
  display: flex;
  align-items: stretch;
  justify-content: space-between;
  gap: 20px;
  padding: 20px;
  padding-bottom: 160px;
  background-color: #2c2c2c;
  min-height: calc(100vh - 180px);
  position: relative;
  top: 80px;
}

.assistance-box {
  display: flex;
  flex-direction: column;
  border-radius: 10px;
  background-color: #1e1e1e;
  padding: 20px;
  color: #ffffff;
  flex: 1;
  min-height: 76vh;
  max-width: 25%;
  margin-left: 40px;
  margin-top: 20px;
  text-align: center;
  font-size: 16px;
  width: 20%;
}
.assistance-box .spacer-assistance-box {
  background-color: #2c2c2c;
  height: 1vh;
  position: relative;
  top: 35vh;
}
.assistance-box .assistant-buttons {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-top: 20px;
}
.assistance-box .assistant-buttons div.button {
  font-size: 14px;
  position: relative;
  width: 100%;
  max-width: 200px;
  cursor: pointer;
  background-color: #1e1e1e;
  border-radius: 10px;
  transition: background-color 0.3s ease;
  text-align: left;
}
.assistance-box .assistant-buttons div.button:hover {
  background-color: #8a2be2;
}
.assistance-box .assistant-buttons div.button .submenu {
  background-color: #1e1e1e;
  display: none;
  position: absolute;
  top: 0;
  left: 95%;
  border-radius: 5px;
  min-width: 150px;
  z-index: 1;
  border: 2px solid white;
}
.assistance-box .assistant-buttons div.button .submenu div.submenu-item {
  font-size: 13px;
}
.assistance-box .assistant-buttons div.button .submenu a {
  padding-top: 5px;
  padding-bottom: 5px;
  font-size: 13px;
  text-align: center;
  display: block;
  color: #ffffff;
  text-decoration: none;
  transition: background-color 0.3s ease;
  border-radius: 0px;
}
.assistance-box .assistant-buttons div.button .submenu a:hover {
  background-color: #8a2be2;
}
.assistance-box .assistant-buttons div.button:hover .submenu {
  display: block;
}
.assistance-box .assistant-buttons div.button .submenu-item {
  position: relative;
}
.assistance-box .assistant-buttons div.button .submenu-item:hover .sub-submenu {
  display: block;
}
.assistance-box .assistant-buttons div.button .submenu-item .sub-submenu {
  font-size: 13px;
  display: none;
  position: absolute;
  top: 0;
  left: 100%;
  background-color: #1e1e1e;
  border-radius: 5px;
  min-width: 150px;
  border: 2px solid white;
  max-height: 200px;
  overflow-y: scroll;
  z-index: 10;
}
.assistance-box .assistant-buttons div.button .submenu-item .sub-submenu div.submenu-item {
  font-size: 12px;
}
.assistance-box .assistant-buttons div.button .submenu-item .sub-submenu div.submenu-item a {
  font-size: 13px;
}
.assistance-box .assistant-buttons div.button .submenu-item .sub-submenu a {
  font-size: 13px;
  display: block;
  color: #ffffff;
  text-decoration: none;
  transition: background-color 0.3s ease;
}
.assistance-box .assistant-buttons div.button .submenu-item .sub-submenu a:hover {
  background-color: #8a2be2;
}
@media (max-width: 1366px), (max-height: 800px) {
  .assistance-box .assistant-buttons div.button .submenu-item .sub-submenu {
    max-height: 125px;
  }
}
.assistance-box .assistant-buttons div.button .submenu-item .sub-submenu::-webkit-scrollbar {
  width: 8px;
}
.assistance-box .assistant-buttons div.button .submenu-item .sub-submenu::-webkit-scrollbar-thumb {
  background-color: #8a2be2;
  border-radius: 4px;
}
.assistance-box .assistant-buttons div.button .submenu-item .sub-submenu::-webkit-scrollbar-track {
  background-color: #1e1e1e;
}
.assistance-box .assistant-buttons a {
  display: block;
  color: #ffffff;
  text-decoration: none;
  width: 100%;
  max-width: 400px;
  background-color: #1e1e1e;
  border-radius: 10px;
  transition: background-color 0.3s ease;
  text-align: left;
}
.assistance-box .assistant-buttons a:hover {
  background-color: #8a2be2;
}

.chat-section {
  display: flex;
  flex-direction: column;
  border-radius: 10px;
  padding: 0;
  color: #ffffff;
  flex: 1;
  min-height: 76vh;
  flex-grow: 3;
  max-width: 70%;
  margin-top: 20px;
  margin-right: 40px;
}
.chat-section .chat-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #1e1e1e;
  padding: 10px 20px;
  border-radius: 10px;
  color: #ffffff;
}
.chat-section .chat-messages {
  background-color: #1e1e1e;
  margin-bottom: 20px;
  padding: 20px;
  border-radius: 5px;
  color: #ffffff;
  flex-grow: 1;
  overflow-y: auto;
}
.chat-section .chat-messages .message {
  margin-bottom: 15px;
}
.chat-section .chat-messages .message .bot-sender {
  font-weight: bold;
  margin-bottom: 5px;
  color: #ffffff;
}
.chat-section .chat-messages .message .system-sender {
  font-weight: bold;
  margin-bottom: 5px;
  color: #FFA500;
}
.chat-section .chat-messages .message .text {
  background-color: #8a2be2;
  padding: 10px;
  border-radius: 10px;
  color: #ffffff;
}
.chat-section .chat-messages .message-user {
  margin-bottom: 15px;
}
.chat-section .chat-messages .message-user .user-sender {
  text-align: end;
  font-weight: bold;
  margin-bottom: 5px;
  color: #ffffff;
}
.chat-section .chat-messages .message-user .text {
  text-align: end;
  background-color: #8a2be2;
  padding: 10px;
  border-radius: 10px;
  color: #ffffff;
}
.chat-section .chat-input {
  display: flex;
  flex-direction: row;
  align-items: center;
  background-color: #1e1e1e;
  border-radius: 5px;
  padding: 10px;
  gap: 10px;
  margin-top: 0;
}
.chat-section .chat-input .container-upload {
  padding-top: 5px;
  padding-left: 5px;
  font-size: 12px;
  color: white;
}
.chat-section .chat-input .container-upload .image_upload {
  padding-top: 5px;
  padding-left: 15px;
  width: 40px;
  height: auto;
  transform: rotate(180deg);
}
.chat-section .chat-input input {
  flex-grow: 1;
  padding: 15px;
  border: none;
  border-radius: 10px;
  background-color: #1e1e1e;
  color: #ffffff;
  margin-right: 10px;
}
.chat-section .chat-input .send-btn {
  background-color: #8a2be2;
  border: none;
  border-radius: 25px;
  width: 50px;
  height: 50px;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: background-color 0.3s ease;
}
.chat-section .chat-input .send-btn:hover {
  background-color: #7b1fa2;
}
.chat-section .chat-input .send-btn .arrow-icon {
  width: 24px;
  height: 24px;
  transition: stroke 0.3s ease;
}

.loading-animation {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.6);
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.spinner {
  width: 50px;
  height: 50px;
  border: 6px solid rgba(255, 255, 255, 0.2);
  border-top-color: #fff;
  border-radius: 50%;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

/*# sourceMappingURL=style.css.map */

